Update static_analyzer_workflow.yml to warn

--- a/.github/workflows/static_analyzer_workflow.yml
+++ b/.github/workflows/static_analyzer_workflow.yml
@@ -1,4 +1,4 @@
-name: Python Code Quality
+name: Python Code Quality Checks
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  code-quality:
+  lint-and-format:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -25,13 +25,13 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run autopep8
-      run: autopep8 --in-place --aggressive --aggressive --recursive src/
+      run: autopep8 --in-place --aggressive --aggressive --recursive src/ || echo "autopep8 finished with warnings"
 
     - name: Run pylint
-      run: pylint src/
+      run: pylint src/ || echo "Pylint reported issues"
 
     - name: Run pyright
-      run: pyright src/
+      run: pyright src/ || echo "Pyright reported issues"
 
     - name: Commit changes
       run: |
