--- a/.github/workflows/pytest_workflow.yml
+++ b/.github/workflows/pytest_workflow.yml
@@ -29,4 +29,4 @@ jobs:
       run: echo "PYTHONPATH=$(pwd)/src:$PYTHONPATH" >> $GITHUB_ENV
 
     - name: Run tests
-      run: pytest ./test
+      run: pytest ./tests
