--- a/.github/workflows/static_analyzer_workflow.yml
+++ b/.github/workflows/static_analyzer_workflow.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
-        git commit -am "Apply autopep8 fixes" || echo "No changes to commit"
-        git push
+        git add .
+        git commit -m "Apply autopep8 fixes" || echo "No changes to commit"
+        git push https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
       if: github.ref == 'refs/heads/main'
+  
