--- a/.github/workflows/static_analyzer_workflow.yml
+++ b/.github/workflows/static_analyzer_workflow.yml
@@ -39,6 +39,5 @@ jobs:
         git config --global user.email 'actions@github.com'
         git add .
         git commit -m "Apply autopep8 fixes" || echo "No changes to commit"
-        git push https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
-      if: github.ref == 'refs/heads/main'
+        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/se2024-jpg/hw2-debugging HEAD:main
   
