--- a/.github/workflows/static_analyzer_workflow.yml
+++ b/.github/workflows/static_analyzer_workflow.yml
@@ -3,8 +3,12 @@ name: Python Code Quality Checks
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**.py'
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.py'
 
 jobs:
   lint-and-format:
@@ -24,20 +28,12 @@ jobs:
         pip install autopep8 pylint pyright
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run autopep8
-      run: autopep8 --in-place --aggressive --aggressive --recursive src/ || echo "autopep8 finished with warnings"
+    - name: Show autopep8 changes
+      run: |
+        autopep8 --diff --aggressive --aggressive --recursive src/
 
     - name: Run pylint
       run: pylint src/ || echo "Pylint reported issues"
 
     - name: Run pyright
       run: pyright src/ || echo "Pyright reported issues"
-
-    - name: Commit changes
-      run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@github.com'
-        git add .
-        git commit -m "Apply autopep8 fixes" || echo "No changes to commit"
-        git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/se2024-jpg/hw2-debugging HEAD:main
-  
